--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -9,6 +9,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
     <script>
         // Configuração do Firebase
@@ -64,6 +65,41 @@
                 console.error("Erro ao atualizar o progresso da fase:", error);
             }
         }
+
+function generatePDF() {
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF();
+
+    // Adiciona a logo
+    doc.addImage('Logo.png', 'PNG', 85, 10, 40, 40);  // Posiciona a logo no PDF
+
+    // Campos de nome e data
+    doc.setFontSize(12);
+    doc.text("Name:_______________________________________________________  Date:_______________", 10, 60);
+
+    // Título
+    doc.setFontSize(20);
+    doc.text(storyTitle, 105, 80, { align: "center" });
+
+    // Texto da história
+    doc.setFontSize(12);
+    let y = 100;  // Posição inicial para o texto
+    const marginLeft = 10;
+    const maxLineWidth = 180;
+    const lineHeight = 10;
+
+    const splitText = doc.splitTextToSize(storyText, maxLineWidth);
+    splitText.forEach(line => {
+        if (y > 280) {
+            doc.addPage();
+            y = 20;
+        }
+        doc.text(line, marginLeft, y);
+        y += lineHeight;
+    });
+
+    doc.save("story.pdf");  // Salva o PDF com o nome 'story.pdf'
+}
     </script>
 
     <style>
@@ -183,6 +219,7 @@
         <h1>Hannah StoryCard</h1>
         <div class="button-container">
             <button id="toggleButton" onclick="toggleView()">Read the story</button>
+            <button class="pdf-button" onclick="generatePDF()">Generate PDF</button>
         </div>
         <div class="title" id="storyTitle"></div>
         <div id="cardsContainer"></div>
