--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -221,10 +221,10 @@ async function loadContent() {
             display: flex;
         }
         .card img {
-            max-width: 100%;
-            max-height: calc(100vh - 150px);
-            border-radius: 10px;
-            margin-bottom: 20px;
+    max-width: 100%; /* Garante que a imagem não ultrapasse o tamanho do cartão */
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 10px; /* Espaçamento abaixo da imagem */
         }
         .card p {
             font-size: 1.5em;
@@ -233,15 +233,15 @@ async function loadContent() {
             margin: 0;
         }
         .businessman {
-            position: absolute;
-            top: 10px;
-            right: 30px;
-            width: 40px;
-            height: 40px;
-            cursor: pointer;
-            z-index: 10;
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 50%;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 50%;
+    z-index: 10;
         }
         button {
             margin: 20px;
