--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -201,21 +201,17 @@ async function loadContent() {
             text-align: center;
         }
         .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: block; /* Altera para bloco para evitar restrições de alinhamento */
     margin: 20px auto; /* Centraliza horizontalmente */
     padding: 20px;
     background-color: #f0f8ff; /* Fundo azul claro */
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-    cursor: pointer;
     width: 80%; /* Reduz a largura para dar espaço nas laterais */
     max-width: 700px; /* Limite de largura máxima */
     min-height: 100px;
     position: relative;
+    text-align: center; /* Centraliza o conteúdo dentro do cartão */
         }
         .active {
             display: flex;
