--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -201,17 +201,20 @@ async function loadContent() {
             text-align: center;
         }
         .card {
-    display: block; /* Altera para bloco para evitar restrições de alinhamento */
-    margin: 20px auto; /* Centraliza horizontalmente */
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 20px auto;
+    padding: 20px 40px 20px 20px; /* Espaçamento à direita para o ícone */
     background-color: #f0f8ff; /* Fundo azul claro */
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 80%; /* Reduz a largura para dar espaço nas laterais */
-    max-width: 700px; /* Limite de largura máxima */
+    width: 80%;
+    max-width: 700px;
     min-height: 100px;
     position: relative;
-    text-align: center; /* Centraliza o conteúdo dentro do cartão */
+    text-align: center;
         }
         .active {
             display: flex;
@@ -230,10 +233,11 @@ async function loadContent() {
         }
         .businessman {
     position: absolute;
-    top: 10px;
+    top: 50%;
     right: 10px;
-    width: 40px;
-    height: 40px;
+    transform: translateY(-50%);
+    width: 30px;
+    height: 30px;
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 50%;
