--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -233,9 +233,8 @@ async function loadContent() {
         }
         .businessman {
     position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
+    top: 10px; /* Posiciona no topo */
+    right: 10px; /* Posiciona na borda direita */
     width: 30px;
     height: 30px;
     cursor: pointer;
