--- a/Level1/Unit1/Flashcards/index.html
+++ b/Level1/Unit1/Flashcards/index.html
@@ -181,6 +181,11 @@
     </div>
     <div id="flashcards-container"></div>
 
+<!-- Botão para gerar PDF -->
+<button onclick="generatePDF()" id="pdf-button" style="padding: 15px 25px; background-color: #4CAF50; color: white; border: none; border-radius: 5px; font-size: 1.2rem; cursor: pointer; margin-top: 20px;">
+    Download PDF
+</button>
+
     <div id="overlay"></div>
     <div id="completion-modal">
         <h2>Phase Completed!</h2>
@@ -348,11 +353,41 @@
             return { level, unit };
         }
 
+// Função para gerar PDF
+function generatePDF() {
+    const container = document.getElementById('flashcards-container');
+    html2canvas(container).then((canvas) => {
+        const imgData = canvas.toDataURL('image/png');
+        const pdf = new jsPDF('p', 'mm', 'a4');
+        const imgWidth = 190;
+        const pageHeight = 297;
+        const imgHeight = (canvas.height * imgWidth) / canvas.width;
+        let heightLeft = imgHeight;
+        let position = 0;
+
+        pdf.addImage(imgData, 'PNG', 10, position, imgWidth, imgHeight);
+        heightLeft -= pageHeight;
+
+        while (heightLeft >= 0) {
+            position = heightLeft - imgHeight;
+            pdf.addPage();
+            pdf.addImage(imgData, 'PNG', 10, position, imgWidth, imgHeight);
+            heightLeft -= pageHeight;
+        }
+        pdf.save("Hannah_Flashcards.pdf");
+    });
+}
+
         function goBack() {
             window.history.back();
         }
 
         generateFlashcards();
-    </script>
-</body>
+
+</script>
+
+<!-- Bibliotecas jsPDF e html2canvas para geração de PDF -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
+    </body>
 </html>
