--- a/Level1/Unit1/QUIZ/index.html
+++ b/Level1/Unit1/QUIZ/index.html
@@ -162,7 +162,6 @@
     <button class="read-btn" id="read-btn" onclick="readQuestion()">Read</button>
     <button class="prev-btn" id="prev-btn" onclick="stopReading(); showPreviousQuestion()">Previous</button>
     <button class="next-btn" id="next-btn" onclick="stopReading(); showNextQuestion()">Next</button>
-    <button class="pdf-btn" id="pdf-btn" onclick="generatePDF()">Generate PDF</button>
 </div>
 
 <div id="feedback" class="feedback">
@@ -196,6 +195,29 @@
 
     // Inicializa o Firebase
     firebase.initializeApp(firebaseConfig);
+
+// Função para exibir o botão PDF se o papel for 'professor' ou 'proprietario'
+function displayPdfButton(role) {
+    if (role === 'professor' || role === 'proprietario') {
+        const pdfButton = document.createElement('button');
+        pdfButton.className = 'pdf-btn';
+        pdfButton.id = 'pdf-btn';
+        pdfButton.textContent = 'Generate PDF';
+        pdfButton.onclick = generatePDF;
+        document.querySelector('.btn-group').appendChild(pdfButton);
+    }
+}
+
+// Obter o papel do usuário e exibir o botão condicionalmente
+firebase.auth().onAuthStateChanged(function(user) {
+    if (user) {
+        // Substitua o caminho abaixo conforme necessário para buscar o papel do usuário
+        firebase.database().ref('usuarios/' + user.uid + '/role').once('value').then((snapshot) => {
+            const role = snapshot.val();
+            displayPdfButton(role);
+        });
+    }
+});
 
     let currentQuestionIndex = 0;
     let questions = [];
@@ -457,61 +479,7 @@
 
     window.onload = loadQuestions;
 
-function generatePDF() {
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF();
-
-    const logo = new Image();
-    logo.src = 'Logo.png'; 
-
-    doc.addImage(logo, 'PNG', 90, 10, 30, 30); 
-
-    doc.setFontSize(20);
-    doc.text('Hannah Quiz', 105, 50, null, null, 'center');
-
-    doc.setFontSize(12);
-    doc.text('Name: ____________________________________', 20, 70);
-    doc.text('Date: _______________', 150, 70);
-
-    let yPosition = 90;
-
-    questions.forEach((q, index) => {
-        doc.setFontSize(14);
-        let questionText = `${index + 1}. ${q.question}`;
-        let textLines = doc.splitTextToSize(questionText, 180);  
-        let questionHeight = textLines.length * 10; 
-
-        if (yPosition + questionHeight > 280) {
-            doc.addPage();
-            yPosition = 20;
-        }
-
-        doc.text(textLines, 20, yPosition);
-        yPosition += questionHeight;
-
-        q.answers.forEach(answer => {
-            doc.setFontSize(12);
-            let answerText = answer;
-            let answerLines = doc.splitTextToSize(answerText, 180);
-            let answerHeight = answerLines.length * 10;
-
-            if (yPosition + answerHeight > 280) {
-                doc.addPage();
-                yPosition = 20;
-            }
-
-            doc.text(answerLines, 30, yPosition);
-            yPosition += answerHeight;
-        });
-
-        yPosition += 10; 
-    });
-
-    doc.save('QuizQuestionsWithLogo.pdf');
-}
 </script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </body>
