--- a/Level1/Unit1/Fill in the Blanks/index.html
+++ b/Level1/Unit1/Fill in the Blanks/index.html
@@ -188,6 +188,26 @@
         <button id="pdfBtn" onclick="generatePDF()">Generate PDF</button>
     </div>
 
+<script>
+    // Função que simula a obtenção do role do usuário (você pode substituir por seu método real)
+    function getUserRole() {
+        return "professor"; // Altere para "proprietário" ou "aluno" para testar
+    }
+
+    // Verificar o role do usuário ao carregar a página
+    document.addEventListener("DOMContentLoaded", function() {
+        const pdfBtn = document.getElementById("pdfBtn");
+        const userRole = getUserRole();
+
+        // Exibir o botão de PDF apenas para "professor" ou "proprietário"
+        if (userRole === "professor" || userRole === "proprietário") {
+            pdfBtn.style.display = "inline-block";
+        } else {
+            pdfBtn.style.display = "none";
+        }
+    });
+</script>
+
     <div id="overlay"></div>
     <div id="completion-modal">
         <h2>Phase Completed!</h2>
