--- a/Level1/Unit1/Fill in the Blanks/index.html
+++ b/Level1/Unit1/Fill in the Blanks/index.html
@@ -189,23 +189,33 @@
     </div>
 
 <script>
-    // Função que simula a obtenção do role do usuário (você pode substituir por seu método real)
-    function getUserRole() {
-        return "professor"; // Altere para "proprietário" ou "aluno" para testar
+    
+    // Função para verificar o role do usuário autenticado usando Firebase Authentication
+    function checkUserRole() {
+        firebase.auth().onAuthStateChanged((user) => {
+            if (user) {
+                const userId = user.uid;
+                // Caminho no banco de dados onde o role do usuário está armazenado
+                firebase.database().ref(`usuarios/${userId}/role`).once('value').then((snapshot) => {
+                    const role = snapshot.val();
+                    const pdfBtn = document.getElementById("pdfBtn");
+
+                    // Exibir o botão de PDF apenas se o role for "professor" ou "proprietário"
+                    if (role === "professor" || role === "proprietário") {
+                        pdfBtn.style.display = "inline-block";
+                    } else {
+                        pdfBtn.style.display = "none";
+                    }
+                });
+            } else {
+                console.error("Usuário não autenticado");
+            }
+        });
     }
 
-    // Verificar o role do usuário ao carregar a página
-    document.addEventListener("DOMContentLoaded", function() {
-        const pdfBtn = document.getElementById("pdfBtn");
-        const userRole = getUserRole();
+    // Chamar a função ao carregar a página
+    document.addEventListener("DOMContentLoaded", checkUserRole);
 
-        // Exibir o botão de PDF apenas para "professor" ou "proprietário"
-        if (userRole === "professor" || userRole === "proprietário") {
-            pdfBtn.style.display = "inline-block";
-        } else {
-            pdfBtn.style.display = "none";
-        }
-    });
 </script>
 
     <div id="overlay"></div>
