--- a/Level1/Unit1/WordSearch/index.html
+++ b/Level1/Unit1/WordSearch/index.html
@@ -148,12 +148,14 @@
             background-color: #357ABD;
         }
     </style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
     <button onclick="history.back()" id="back-button">Back</button>
 
     <h1>Hannah Word Search Game</h1>
     <button id="reset-button">Restart Game</button>
+    <button id="pdf-button" onclick="generatePDF()">Generate PDF</button>
     <div id="word-search-container">
         <canvas id="word-search-canvas"></canvas>
         <div id="words-list">
@@ -192,5 +194,31 @@
 
     <!-- Script do jogo -->
     <script src="script.js"></script>
+<script>
+    function generatePDF() {
+        const { jsPDF } = window.jspdf;
+        const doc = new jsPDF();
+
+        // Título
+        doc.setFontSize(18);
+        doc.text('Hannah Word Search Game', 105, 20, { align: 'center' });
+
+        // Lista de palavras
+        const wordsList = Array.from(document.querySelectorAll('#words-list li'))
+            .map(li => li.textContent)
+            .join(', ');
+
+        doc.setFontSize(12);
+        doc.text('Words to Find:', 10, 30);
+        doc.text(wordsList, 10, 40, { maxWidth: 180 });
+
+        // Grid do caça-palavras
+        const canvas = document.getElementById('word-search-canvas');
+        doc.addImage(canvas.toDataURL('image/png'), 'PNG', 10, 50, 180, 180); // Ajusta a posição e tamanho
+
+        // Gerar e baixar o PDF
+        doc.save('Hannah_Word_Search_Game.pdf');
+    }
+</script>
 </body>
 </html>
