--- a/Level1/Unit1/WordSearch/index.html
+++ b/Level1/Unit1/WordSearch/index.html
@@ -199,25 +199,38 @@
         const { jsPDF } = window.jspdf;
         const doc = new jsPDF();
 
-        // Título
-        doc.setFontSize(18);
-        doc.text('Hannah Word Search Game', 105, 20, { align: 'center' });
+        // Adicionar a logo e campos de nome e data
+        const img = new Image();
+        img.src = '../../../imagens/hannah_logo.png'; // Caminho da logo (3 níveis acima)
 
-        // Lista de palavras
-        const wordsList = Array.from(document.querySelectorAll('#words-list li'))
-            .map(li => li.textContent)
-            .join(', ');
+        // Carregar a imagem e continuar com a criação do PDF
+        img.onload = () => {
+            doc.addImage(img, 'PNG', 10, 10, 30, 30); // Posiciona a logo no topo (10,10) com tamanho 3x3cm
 
-        doc.setFontSize(12);
-        doc.text('Words to Find:', 10, 30);
-        doc.text(wordsList, 10, 40, { maxWidth: 180 });
+            // Adicionar campos de Nome e Data ao lado da logo
+            doc.setFontSize(12);
+            doc.text('Name: ___________________________________________  Date: __________', 50, 20);
 
-        // Grid do caça-palavras
-        const canvas = document.getElementById('word-search-canvas');
-        doc.addImage(canvas.toDataURL('image/png'), 'PNG', 10, 50, 180, 180); // Ajusta a posição e tamanho
+            // Adicionar título do PDF abaixo da logo e dos campos de nome/data
+            doc.setFontSize(18);
+            doc.text('Hannah Word Search Game', 105, 50, { align: 'center' });
 
-        // Gerar e baixar o PDF
-        doc.save('Hannah_Word_Search_Game.pdf');
+            // Lista de palavras
+            const wordsList = Array.from(document.querySelectorAll('#words-list li'))
+                .map(li => li.textContent)
+                .join(', ');
+
+            doc.setFontSize(12);
+            doc.text('Words to Find:', 10, 60);
+            doc.text(wordsList, 10, 70, { maxWidth: 180 });
+
+            // Grid do caça-palavras
+            const canvas = document.getElementById('word-search-canvas');
+            doc.addImage(canvas.toDataURL('image/png'), 'PNG', 10, 80, 180, 180); // Ajusta a posição e tamanho
+
+            // Gerar e baixar o PDF
+            doc.save('Hannah_Word_Search_Game.pdf');
+        };
     }
 </script>
 </body>
