--- a/Level1/Unit1/WordSearch/index.html
+++ b/Level1/Unit1/WordSearch/index.html
@@ -155,7 +155,7 @@
 
     <h1>Hannah Word Search Game</h1>
     <button id="reset-button">Restart Game</button>
-    <button id="pdf-button" onclick="generatePDF()">Generate PDF</button>
+    <button id="pdf-button" onclick="generatePDF()" style="margin: 20px; padding: 10px 20px; font-size: 16px; cursor: pointer; border: none; border-radius: 5px; background-color: #4a90e2; color: white; transition: background-color 0.3s ease;">Generate PDF</button>
     <div id="word-search-container">
         <canvas id="word-search-canvas"></canvas>
         <div id="words-list">
