--- a/Level1/Unit1/WordSearch/index.html
+++ b/Level1/Unit1/WordSearch/index.html
@@ -233,6 +233,8 @@
         };
     }
 </script>
+
+<script>
     // Função para verificar o role do usuário
 function checkUserRole() {
     firebase.auth().onAuthStateChanged(async function(user) {
