--- a/Level1/Unit1/WordSearch2/index.html
+++ b/Level1/Unit1/WordSearch2/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah Word Search Game</title>
     <style>
+        /* Estilos originais do arquivo */
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
-            color: #333;
             margin: 0;
             padding: 0;
             display: flex;
@@ -16,6 +15,10 @@
             align-items: center;
             height: 100vh;
             box-sizing: border-box;
+            background-image: url('../../../imagens/fundo.png');
+            background-repeat: repeat;
+            background-size: contain;
+            background-position: center;
         }
         h1 {
             font-size: 2.5em;
@@ -37,7 +40,7 @@
         }
         #word-search-canvas {
             width: 100%;
-            max-width: 600px; /* Limitar o tamanho máximo do canvas */
+            max-width: 600px;
             height: auto;
             border: 2px solid #4a90e2;
             border-radius: 10px;
@@ -78,20 +81,6 @@
         #reset-button:hover {
             background-color: #357ABD;
         }
-
-        .image-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
-            gap: 10px;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-
-        .image-container img {
-            max-width: 100px;
-            margin: auto;
-        }
-
         #back-button {
             margin: 10px;
             padding: 10px 20px;
@@ -111,26 +100,62 @@
             background-color: #357ab7;
         }
 
-        /* Media query para telas pequenas */
-        @media (max-width: 600px) {
-            #back-button {
-                position: static;
-                margin: 10px auto;
-                display: block;
-            }
-            h1 {
-                margin-top: 50px; /* Adiciona espaço extra acima do título */
-            }
+        /* Estilos do modal de conclusão */
+        #overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            display: none;
+            z-index: 1000;
+        }
+        #completion-modal {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            text-align: center;
+            display: none;
+            z-index: 1001;
+        }
+        #completion-modal h2 {
+            margin-top: 0;
+            font-size: 2rem;
+            color: #4a90e2;
+        }
+        #completion-modal p {
+            font-size: 1.2rem;
+            margin: 10px 0;
+        }
+        #completion-modal button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 1rem;
+            cursor: pointer;
+            border: none;
+            border-radius: 5px;
+            background-color: #4a90e2;
+            color: white;
+            transition: background-color 0.3s ease;
+        }
+        #completion-modal button:hover {
+            background-color: #357ABD;
         }
     </style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
-<button onclick="window.location.href='../index.html'" id="back-button">
-    Back
-</button>
+    <button onclick="history.back()" id="back-button">Back</button>
 
     <h1>Hannah Word Search Game</h1>
     <button id="reset-button">Restart Game</button>
+    <button id="pdf-button" onclick="generatePDF()" style="display: none; margin: 20px; padding: 10px 20px; font-size: 16px; cursor: pointer; border: none; border-radius: 5px; background-color: #4a90e2; color: white; transition: background-color 0.3s ease;">Generate PDF</button>
     <div id="word-search-container">
         <canvas id="word-search-canvas"></canvas>
         <div id="words-list">
@@ -138,6 +163,105 @@
             <ul id="words"></ul>
         </div>
     </div>
+
+    <!-- Modal de conclusão -->
+    <div id="overlay"></div>
+    <div id="completion-modal">
+        <h2>Phase Completed!</h2>
+        <p>Congratulations! You have completed this phase.</p>
+        <button onclick="closeModal()">Close</button>
+    </div>
+
+    <!-- Scripts do Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
+    <!-- Configuração do Firebase -->
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+            authDomain: "hannahenglishcourse.firebaseapp.com",
+            projectId: "hannahenglishcourse",
+            storageBucket: "hannahenglishcourse.appspot.com",
+            messagingSenderId: "449818788486",
+            appId: "APP_ID",
+            measurementId: "G-07VVJG9LRS",
+            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
+        };
+        firebase.initializeApp(firebaseConfig);
+    </script>
+
+    <!-- Script do jogo -->
     <script src="script.js"></script>
+<script>
+    function generatePDF() {
+        const { jsPDF } = window.jspdf;
+        const doc = new jsPDF();
+
+        // Adicionar a logo e campos de nome e data
+        const img = new Image();
+        img.src = '../../../imagens/hannah_logo.png'; // Caminho da logo (3 níveis acima)
+
+        // Carregar a imagem e continuar com a criação do PDF
+        img.onload = () => {
+            doc.addImage(img, 'PNG', 10, 10, 30, 30); // Posiciona a logo no topo (10,10) com tamanho 3x3cm
+
+            // Adicionar campos de Nome e Data ao lado da logo
+            doc.setFontSize(12);
+            doc.text('Name: ___________________________________________  Date: __________', 50, 20);
+
+            // Adicionar título do PDF abaixo da logo e dos campos de nome/data
+            doc.setFontSize(18);
+            doc.text('Hannah Word Search Game', 105, 50, { align: 'center' });
+
+            // Lista de palavras
+            const wordsList = Array.from(document.querySelectorAll('#words-list li'))
+                .map(li => li.textContent)
+                .join(', ');
+
+            doc.setFontSize(12);
+            doc.text('Words to Find:', 10, 60);
+            doc.text(wordsList, 10, 70, { maxWidth: 180 });
+
+            // Grid do caça-palavras
+            const canvas = document.getElementById('word-search-canvas');
+            doc.addImage(canvas.toDataURL('image/png'), 'PNG', 10, 80, 180, 180); // Ajusta a posição e tamanho
+
+            // Gerar e baixar o PDF
+            doc.save('Hannah_Word_Search_Game.pdf');
+        };
+    }
+</script>
+
+<script>
+    // Função para verificar o role do usuário
+function checkUserRole() {
+    firebase.auth().onAuthStateChanged(async function(user) {
+        if (user) {
+            const uid = user.uid;
+            const roleRef = firebase.database().ref('usuarios/' + uid + '/role');
+            
+            // Obtenha o role do usuário no banco de dados
+            roleRef.once('value').then((snapshot) => {
+                const role = snapshot.val();
+                console.log("Role do usuário:", role); // Log para verificar o role
+                
+                // Exibe o botão somente se o role for 'professor' ou 'proprietario'
+                if (role === 'professor' || role === 'proprietario') {
+                    document.getElementById('pdf-button').style.display = 'block';
+                }
+            }).catch((error) => {
+                console.error("Erro ao obter o role:", error);
+            });
+        } else {
+            console.error("Usuário não autenticado");
+        }
+    });
+}
+
+    // Chama a função ao carregar a página
+    checkUserRole();
+</script>
 </body>
 </html>
