--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -177,7 +177,7 @@
     firebase.initializeApp(firebaseConfig);
 
     async function generatePDF() {
-        const { jsPDF } = window.jspdf;
+        const doc = new jsPDF();
         const doc = new jsPDF();
         
         // Adiciona a logo e o campo Name e Date
