--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -177,8 +177,7 @@
     firebase.initializeApp(firebaseConfig);
 
     async function generatePDF() {
-        const doc = new jsPDF();
-        const doc = new jsPDF();
+        const { jsPDF } = window.jspdf;
         
         // Adiciona a logo e o campo Name e Date
         const logo = new Image();
