--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -182,6 +182,8 @@
     // Adiciona a logo e o campo Name e Date
     const logo = new Image();
     logo.src = '../../../imagens/Logo.png';
+
+    // Quando a logo for carregada, gera o PDF
     logo.onload = function() {
         doc.addImage(logo, 'PNG', 10, 10, 30, 30); // Ajuste a posição e o tamanho conforme necessário
         doc.setFontSize(12);
@@ -216,8 +218,18 @@
                 yOffset += 40;
             }
         });
-        
-        doc.save("Hannah_Missing_Word.pdf"); // Salva o PDF após adicionar tudo
+
+        // Salva o PDF
+        doc.save("Hannah_Missing_Word.pdf");
+    };
+
+    // Se a imagem não carregar, salva o PDF sem a imagem
+    logo.onerror = function() {
+        doc.setFontSize(12);
+        doc.text("Name: __________________________________________ Date: ____________", 50, 20);
+        doc.setFontSize(16);
+        doc.text("Hannah Missing Word", 10, 50);
+        doc.save("Hannah_Missing_Word.pdf");
     };
 }
 
