--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -178,15 +178,16 @@
 
     async function generatePDF() {
     const { jsPDF } = window.jspdf;
-    const doc = new jsPDF(); // Criação do documento PDF
-    
-    // Adiciona a logo e o campo Name e Date
-    const logo = new Image();
-    logo.src = '../../../imagens/Logo.png';
+    const doc = new jsPDF();
 
-    // Quando a logo for carregada, gera o PDF
+    // Carrega a logo e gera o PDF
+    const logo = new Image();
+    logo.src = 'Logo.png'; // Ajuste o nome do arquivo conforme necessário
+
+    // Garante que a logo seja carregada em Base64
     logo.onload = function() {
-        doc.addImage(logo, 'PNG', 10, 10, 30, 30); // Ajuste a posição e o tamanho conforme necessário
+        // Adiciona a logo ao PDF
+        doc.addImage(logo, 'PNG', 10, 10, 30, 30);
         doc.setFontSize(12);
         doc.text("Name: __________________________________________ Date: ____________", 50, 20);
 
@@ -195,7 +196,7 @@
         doc.text("Hannah Missing Word", 10, 50);
 
         // Adiciona as atividades
-        let yOffset = 60; // Posicionamento inicial
+        let yOffset = 60; // Posição inicial
         document.querySelectorAll('.activity').forEach((activity, index) => {
             if (yOffset > 270) { // Se ultrapassar o limite da página
                 doc.addPage();
@@ -204,16 +205,22 @@
 
             const imgElement = activity.querySelector('img');
             if (imgElement) {
-                const imgData = imgElement.src;
-                doc.addImage(imgData, 'JPEG', 10, yOffset, 30, 30); // Ajuste conforme necessário
+                // Converte imagem para Base64 e adiciona ao PDF
+                const canvas = document.createElement('canvas');
+                const ctx = canvas.getContext('2d');
+                canvas.width = imgElement.width;
+                canvas.height = imgElement.height;
+                ctx.drawImage(imgElement, 0, 0, imgElement.width, imgElement.height);
+                const imgData = canvas.toDataURL('image/jpeg');
+                doc.addImage(imgData, 'JPEG', 10, yOffset, 30, 30);
             }
-            
+
             const wordContainer = activity.querySelector('.word-container');
             if (wordContainer) {
                 doc.setFontSize(14);
                 let xPos = 50;
                 wordContainer.querySelectorAll('.missing-letter-input').forEach(() => {
-                    doc.text("_____", xPos, yOffset + 10); // Adiciona espaços para preencher
+                    doc.text("_____", xPos, yOffset + 10);
                     xPos += 15;
                 });
                 yOffset += 40;
@@ -224,7 +231,7 @@
         doc.save("Hannah_Missing_Word.pdf");
     };
 
-    // Se a imagem não carregar, salva o PDF sem a imagem
+    // Caso a logo não carregue, salva o PDF sem a imagem
     logo.onerror = function() {
         doc.setFontSize(12);
         doc.text("Name: __________________________________________ Date: ____________", 50, 20);
