--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -139,7 +139,7 @@
 <button onclick="history.back()" style="padding: 15px 25px; background-color: black; color: white; border: none; border-radius: 10px; font-size: 1.5rem; cursor: pointer; transition: background-color 0.3s ease;">
     Back
 </button>
-<button onclick="generatePDF()" style="padding: 15px 25px; background-color: #32CD32; color: white; border: none; border-radius: 10px; font-size: 1.5rem; cursor: pointer; transition: background-color 0.3s ease; margin-top: 10px;">
+<button id="pdfButton" onclick="generatePDF()" style="display: none; padding: 15px 25px; background-color: #32CD32; color: white; border: none; border-radius: 10px; font-size: 1.5rem; cursor: pointer; transition: background-color 0.3s ease; margin-top: 10px;">
     Generate PDF
 </button>
 
@@ -175,6 +175,26 @@
 
     // Inicialização do Firebase
     firebase.initializeApp(firebaseConfig);
+
+// Função para verificar o role e exibir o botão se necessário
+    firebase.auth().onAuthStateChanged((user) => {
+    if (user) {
+        const userId = user.uid;
+        const userRoleRef = firebase.database().ref(`usuarios/${userId}/role`);
+
+        userRoleRef.once('value').then((snapshot) => {
+            const role = snapshot.val();
+            // Exibe o botão apenas se o role for "professor" ou "proprietário"
+            if (role === 'professor' || role === 'proprietário') {
+                document.getElementById("pdfButton").style.display = "inline-block";
+            }
+        }).catch((error) => {
+            console.error("Erro ao buscar o role do usuário:", error);
+        });
+    } else {
+        console.log("Nenhum usuário autenticado.");
+    }
+});
 
     async function generatePDF() {
     const { jsPDF } = window.jspdf;
