--- a/Level1/Unit1/Mixed Letters FIXO/index.html
+++ b/Level1/Unit1/Mixed Letters FIXO/index.html
@@ -150,6 +150,9 @@
 <button onclick="history.back()" style="padding: 15px 25px; background-color: black; color: white; border: none; border-radius: 10px; font-size: 1.5rem; cursor: pointer; transition: background-color 0.3s ease;">
     Back
 </button>
+<button id="pdfButton" onclick="generatePDF()" style="display: none; padding: 15px 25px; background-color: #32CD32; color: white; border: none; border-radius: 10px; font-size: 1.5rem; cursor: pointer; transition: background-color 0.3s ease; margin-top: 10px;">
+    Generate PDF
+</button>
 
 <h1>Hannah Mixed Letters</h1>
 
@@ -167,6 +170,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 <script>
     // Configuração do Firebase
     const firebaseConfig = {
@@ -180,6 +184,82 @@
         databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
     };
     firebase.initializeApp(firebaseConfig);
+
+firebase.auth().onAuthStateChanged((user) => {
+    if (user) {
+        const userId = user.uid;
+        const userRoleRef = firebase.database().ref(`usuarios/${userId}/role`);
+
+        userRoleRef.once('value').then((snapshot) => {
+            const role = snapshot.val();
+            // Exibe o botão apenas se o role for "professor" ou "proprietário"
+            if (role === 'professor' || role === 'proprietário') {
+                document.getElementById("pdfButton").style.display = "inline-block";
+            }
+        }).catch((error) => {
+            console.error("Erro ao buscar o role do usuário:", error);
+        });
+    } else {
+        console.log("Nenhum usuário autenticado.");
+    }
+});
+
+async function generatePDF() {
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF();
+
+    // Carrega a logo e gera o PDF
+    const logo = new Image();
+    logo.src = 'Logo.png';
+
+    logo.onload = function() {
+        doc.addImage(logo, 'PNG', 10, 10, 30, 30);
+        doc.setFontSize(12);
+        doc.text("Name: __________________________________________ Date: ____________", 50, 20);
+        doc.setFontSize(16);
+        doc.text("Hannah Mixed Letters", 10, 50);
+
+        let yOffset = 60;
+        document.querySelectorAll('.activity').forEach((activity, index) => {
+            if (yOffset > 270) {
+                doc.addPage();
+                yOffset = 20;
+            }
+
+            const imgElement = activity.querySelector('img');
+            if (imgElement) {
+                const canvas = document.createElement('canvas');
+                const ctx = canvas.getContext('2d');
+                canvas.width = imgElement.width;
+                canvas.height = imgElement.height;
+                ctx.drawImage(imgElement, 0, 0, imgElement.width, imgElement.height);
+                const imgData = canvas.toDataURL('image/jpeg');
+                doc.addImage(imgData, 'JPEG', 10, yOffset, 30, 30);
+            }
+
+            const wordContainer = activity.querySelector('.word-container');
+            if (wordContainer) {
+                doc.setFontSize(14);
+                let xPos = 50;
+                wordContainer.querySelectorAll('.letter-input').forEach(() => {
+                    doc.text("_____", xPos, yOffset + 10);
+                    xPos += 15;
+                });
+                yOffset += 40;
+            }
+        });
+
+        doc.save("Hannah_Mixed_Letters.pdf");
+    };
+
+    logo.onerror = function() {
+        doc.setFontSize(12);
+        doc.text("Name: __________________________________________ Date: ____________", 50, 20);
+        doc.setFontSize(16);
+        doc.text("Hannah Mixed Letters", 10, 50);
+        doc.save("Hannah_Mixed_Letters.pdf");
+    };
+}
 
     let activities = [];
     let completedWords = 0;
