--- a/Level1/Unit1/Mixed Letters FIXO/index.html
+++ b/Level1/Unit1/Mixed Letters FIXO/index.html
@@ -208,6 +208,7 @@ async function generatePDF() {
     const { jsPDF } = window.jspdf;
     const doc = new jsPDF();
 
+    // Carrega a logo e gera o PDF
     const logo = new Image();
     logo.src = 'Logo.png';
 
@@ -219,7 +220,6 @@ async function generatePDF() {
         doc.text("Hannah Mixed Letters", 10, 50);
 
         let yOffset = 60;
-
         document.querySelectorAll('.activity').forEach((activity, index) => {
             if (yOffset > 270) {
                 doc.addPage();
@@ -241,22 +241,22 @@ async function generatePDF() {
             if (wordContainer) {
                 doc.setFontSize(14);
                 let xPos = 50;
-                let word = "";  // Obtém a palavra original
                 
-                wordContainer.querySelectorAll('.letter-input').forEach((input, idx) => {
+                // Adiciona espaços para o aluno escrever as letras
+                wordContainer.querySelectorAll('.letter-input').forEach(() => {
                     doc.text("_____", xPos, yOffset + 10);
                     xPos += 15;
-                    word += input.placeholder;  // Aqui estamos coletando as letras originais
                 });
-                yOffset += 20;
 
-                // Embaralha as letras
-                const shuffledWord = word.split('').sort(() => Math.random() - 0.5).join('');
-                
-                // Adiciona as letras fora de ordem abaixo das linhas
-                doc.setFontSize(12);
-                doc.text(`Letters (mixed): ${shuffledWord}`, 50, yOffset + 10);
-                yOffset += 30;
+                // Adiciona as letras embaralhadas abaixo dos espaços
+                const mixedLettersElement = wordContainer.querySelector('.mixed-letters');
+                if (mixedLettersElement) {
+                    const mixedLetters = Array.from(mixedLettersElement.children).map(el => el.innerText).join(' ');
+                    yOffset += 10;
+                    doc.text(`Letters (mixed): ${mixedLetters}`, 50, yOffset + 10);
+                }
+
+                yOffset += 40;
             }
         });
 
