--- a/Level1/Unit1/Mixed Letters FIXO/index.html
+++ b/Level1/Unit1/Mixed Letters FIXO/index.html
@@ -144,6 +144,17 @@
         #completion-modal button:hover {
             background-color: #28a428;
         }
+@media (max-width: 600px) {
+    .letter-input {
+        width: 30px;
+        font-size: 28px;
+        margin-right: 3px;
+    }
+
+    .mixed-letters {
+        font-size: 28px;
+    }
+}
     </style>
 </head>
 <body>
