--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -133,7 +133,27 @@
         #completion-modal button:hover {
             background-color: #28a428;
         }
-    </style>
+@media (max-width: 600px) {
+    .activity {
+        flex-direction: column; /* Coloca os elementos em coluna em vez de linha */
+        align-items: center; /* Centraliza os elementos */
+    }
+
+    .activity img {
+        margin: 0 0 15px 0; /* Remove a margem direita e adiciona margem inferior */
+    }
+
+    .missing-letter-input {
+        width: 30px; /* Diminui a largura dos campos de entrada */
+        font-size: 28px; /* Ajusta o tamanho da fonte */
+        margin-right: 3px; /* Reduz o espaço entre os campos */
+    }
+
+    .missing-word {
+        font-size: 28px; /* Reduz o tamanho da fonte para letras embaralhadas */
+    }
+}
+   </style>
 </head>
 <body>
 <button onclick="history.back()" style="padding: 15px 25px; background-color: black; color: white; border: none; border-radius: 10px; font-size: 1.5rem; cursor: pointer; transition: background-color 0.3s ease;">
